# big-3-super-agent

./: .env.local  .env.local.example  .env.wsl  .env.wsl.example  .gitignore  Makefile  README.md
apps/orchestration/: README.md  pyproject.toml
apps/orchestration/dual_orchestrator/: __init__.py  config.py  main.py
apps/orchestration/dual_orchestrator/models/: task.py
apps/orchestration/dual_orchestrator/observability/: tracing.py
apps/orchestration/dual_orchestrator/queue/: base.py  memory.py
apps/orchestration/dual_orchestrator/services/: job_store.py  orchestrator.py  task_router.py
apps/orchestration/dual_orchestrator/skills/: loader.py  registry.json
apps/orchestration/dual_orchestrator/utils/: traces_to_sqlite.py
apps/orchestration/dual_orchestrator/windows_edge/: edge_client.py
apps/orchestration/dual_orchestrator/workers/: base.py  browser_worker.py  coding_worker.py
apps/orchestration/tests/: test_task_router.py
apps/orchestration/windows_edge/: README.md  requirements.txt
apps/orchestration/windows_edge/windows_edge/: __init__.py  audio.py  logging_utils.py  main.py  realtime_client.py  transcript_router.py
apps/orchestration/wsl_gateway/: README.md  pyproject.toml
apps/orchestration/wsl_gateway/src/big3_orchestration/: __init__.py
apps/orchestration/wsl_gateway/src/big3_orchestration/api/: app.py
apps/orchestration/wsl_gateway/src/big3_orchestration/config/: settings.py
apps/orchestration/wsl_gateway/src/big3_orchestration/logging/: json_logger.py
apps/orchestration/wsl_gateway/src/big3_orchestration/models/: tasks.py
apps/orchestration/wsl_gateway/src/big3_orchestration/queue/: base.py  factory.py  memory.py
apps/orchestration/wsl_gateway/src/big3_orchestration/services/: orchestrator.py
apps/orchestration/wsl_gateway/tests/: test_orchestrator.py  test_queue.py
apps/orchestrator/: README.md  pyproject.toml
apps/orchestrator/src/orchestrator_gateway/: __main__.py  config.py  engine.py  main.py  models.py  queue.py  routing.py
apps/orchestrator/src/orchestrator_gateway/observability/: metrics.py  tracing.py
apps/orchestrator/src/orchestrator_gateway/workers/: base.py  browser.py  coding.py  registry.py  summary.py
apps/orchestrator/tests/: test_queue.py  test_routing.py
windows/: Agent.bat  (+2 more)
(+17 files in other folders)
