[project]
name = "dual-orchestrator"
version = "0.1.0"
description = "Dual-environment orchestration system for the Big-3 Super Agent"
authors = [{name = "Big-3 Super Agent Team"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "aiohttp>=3.9.5",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "prometheus-client>=0.20.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "ruff>=0.4.8",
]

[project.optional-dependencies]
windows = [
    "sounddevice>=0.4.6",
    "webrtcvad>=2.0.10",
]
workers = [
    "playwright>=1.45.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

