[tool.poetry]
name = "big-3-orchestrator"
version = "0.1.0"
description = "Dual-environment orchestration gateway for Big-3 Super Agent"
authors = ["Big-3 Super Agent Team"]
readme = "README.md"
packages = [{include = "orchestrator_gateway", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
structlog = "^24.1.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
