[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "big3-orchestration"
version = "0.1.0"
description = "WSL orchestration gateway for the Big-3 Super Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.6",
    "pydantic-settings",
    "httpx",
    "prometheus-client",
    "structlog",
    "anyio",
    "sqlite-utils",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
